--- a/IG Engine/IG Engine.vcxproj
+++ b/IG Engine/IG Engine.vcxproj
@@ -131,6 +131,13 @@
     <ClCompile Include="Graphics\Shaders\Shader.cpp" />
     <ClCompile Include="Graphics\TextGenerator.cpp" />
     <ClCompile Include="Graphics\Texture.cpp" />
+    <ClCompile Include="ImguiManager.cpp" />
+    <ClCompile Include="ImGui\imgui.cpp" />
+    <ClCompile Include="ImGui\imgui_demo.cpp" />
+    <ClCompile Include="ImGui\imgui_draw.cpp" />
+    <ClCompile Include="ImGui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="ImGui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="ImGui\imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Utility\IGException.cpp" />
     <ClCompile Include="Utility\Monitor.cpp" />
@@ -145,6 +152,15 @@
     <ClInclude Include="Graphics\Shaders\Shader.h" />
     <ClInclude Include="Graphics\TextGenerator.h" />
     <ClInclude Include="Graphics\Texture.h" />
+    <ClInclude Include="ImguiManager.h" />
+    <ClInclude Include="ImGui\imconfig.h" />
+    <ClInclude Include="ImGui\imgui.h" />
+    <ClInclude Include="ImGui\imgui_impl_glfw.h" />
+    <ClInclude Include="ImGui\imgui_impl_opengl3.h" />
+    <ClInclude Include="ImGui\imgui_internal.h" />
+    <ClInclude Include="ImGui\imstb_rectpack.h" />
+    <ClInclude Include="ImGui\imstb_textedit.h" />
+    <ClInclude Include="ImGui\imstb_truetype.h" />
     <ClInclude Include="Utility\Enums.h" />
     <ClInclude Include="Utility\IGException.h" />
     <ClInclude Include="Utility\Monitor.h" />
