--- a/IG Engine/imgui.ini
+++ b/IG Engine/imgui.ini
@@ -19,7 +19,12 @@ Size=198,71
 Collapsed=0
 
 [Window][IGEngine]
-Pos=3,9
-Size=338,87
+Pos=0,1
+Size=348,115
+Collapsed=0
+
+[Window][Object properties]
+Pos=991,538
+Size=293,112
 Collapsed=0
 
