Cleaning pt. 2 AssetManager Camera Input 70%

--- a/IG Engine/imgui.ini
+++ b/IG Engine/imgui.ini
@@ -20,11 +20,16 @@ Collapsed=0
 
 [Window][IGEngine]
 Pos=0,1
-Size=349,160
+Size=346,170
 Collapsed=0
 
 [Window][Object properties]
 Pos=991,538
 Size=293,112
+Collapsed=0
+
+[Window][Camera properties]
+Pos=-2,171
+Size=348,206
 Collapsed=0
 
