--- a/IG Engine/imgui.ini
+++ b/IG Engine/imgui.ini
@@ -19,8 +19,8 @@ Size=198,71
 Collapsed=0
 
 [Window][IGEngine]
-Pos=0,1
-Size=346,170
+Pos=2,2
+Size=350,239
 Collapsed=0
 
 [Window][Object properties]
@@ -29,7 +29,17 @@ Size=293,112
 Collapsed=0
 
 [Window][Camera properties]
-Pos=-2,171
-Size=348,206
+Pos=2,245
+Size=350,208
+Collapsed=0
+
+[Window][Example: Console]
+Pos=61,62
+Size=520,600
+Collapsed=0
+
+[Window][Light properties]
+Pos=5,454
+Size=348,87
 Collapsed=0
 
