--- a/IG Engine/imgui.ini
+++ b/IG Engine/imgui.ini
@@ -19,8 +19,8 @@ Size=198,71
 Collapsed=0
 
 [Window][IGEngine]
-Pos=2,2
-Size=350,239
+Pos=3,4
+Size=349,257
 Collapsed=0
 
 [Window][Object properties]
@@ -29,7 +29,7 @@ Size=293,112
 Collapsed=0
 
 [Window][Camera properties]
-Pos=2,245
+Pos=1,260
 Size=350,208
 Collapsed=0
 
@@ -39,7 +39,12 @@ Size=520,600
 Collapsed=0
 
 [Window][Light properties]
-Pos=5,454
+Pos=2,468
 Size=348,87
+Collapsed=0
+
+[Window][Light terrain properties]
+Pos=2,556
+Size=348,160
 Collapsed=0
 
