--- a/IG Engine/IG Engine.vcxproj
+++ b/IG Engine/IG Engine.vcxproj
@@ -130,14 +130,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AssetManager\AssetManager.cpp" />
+    <ClCompile Include="Graphics\Renderer\EntityRenderer.cpp" />
     <ClCompile Include="Graphics\Entities\Entity.cpp" />
     <ClCompile Include="Graphics\Camera\CameraHUD.cpp" />
     <ClCompile Include="Engine\Engine.cpp" />
     <ClCompile Include="Graphics\Camera\Camera.cpp" />
-    <ClCompile Include="Graphics\Renderer\Renderer.cpp" />
+    <ClCompile Include="Graphics\Renderer\RendererMaster.cpp" />
+    <ClCompile Include="Graphics\Resources\Material.cpp" />
     <ClCompile Include="Graphics\Shaders\Shader.cpp" />
     <ClCompile Include="Graphics\TextGenerator.cpp" />
     <ClCompile Include="Graphics\Resources\Texture.cpp" />
+    <ClCompile Include="Graphics\Renderer\HUDRenderer.cpp" />
     <ClCompile Include="ImGui\ImGuiManager\ImguiManager.cpp" />
     <ClCompile Include="ImGui\imgui.cpp" />
     <ClCompile Include="ImGui\imgui_demo.cpp" />
@@ -149,6 +152,8 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Graphics\Resources\Model.cpp" />
     <ClCompile Include="Graphics\Resources\Mesh.cpp" />
+    <ClCompile Include="Graphics\Renderer\TerrainRenderer.cpp" />
+    <ClCompile Include="World\Structures\Terrain.cpp" />
     <ClCompile Include="Utility\IGException.cpp" />
     <ClCompile Include="Utility\Monitor.cpp" />
     <ClCompile Include="Utility\Timer.cpp" />
@@ -157,14 +162,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssetManager\AssetManager.h" />
+    <ClInclude Include="Graphics\Renderer\EntityRenderer.h" />
     <ClInclude Include="Graphics\Entities\Entity.h" />
     <ClInclude Include="Graphics\Camera\CameraHUD.h" />
     <ClInclude Include="Engine\Engine.h" />
     <ClInclude Include="Graphics\Camera\Camera.h" />
-    <ClInclude Include="Graphics\Renderer\Renderer.h" />
+    <ClInclude Include="Graphics\Renderer\RendererMaster.h" />
+    <ClInclude Include="Graphics\Resources\Material.h" />
     <ClInclude Include="Graphics\Shaders\Shader.h" />
     <ClInclude Include="Graphics\TextGenerator.h" />
     <ClInclude Include="Graphics\Resources\Texture.h" />
+    <ClInclude Include="Graphics\Renderer\HUDRenderer.h" />
     <ClInclude Include="ImGui\ImGuiManager\ImguiManager.h" />
     <ClInclude Include="ImGui\imconfig.h" />
     <ClInclude Include="ImGui\imgui.h" />
@@ -177,6 +185,8 @@
     <ClInclude Include="Graphics\Resources\Model.h" />
     <ClInclude Include="Graphics\Resources\Mesh.h" />
     <ClInclude Include="Graphics\Light\Light.h" />
+    <ClInclude Include="Graphics\Renderer\TerrainRenderer.h" />
+    <ClInclude Include="World\Structures\Terrain.h" />
     <ClInclude Include="Utility\StringUtil.h" />
     <ClInclude Include="Utility\Enums.h" />
     <ClInclude Include="Utility\IGException.h" />
@@ -190,9 +200,11 @@
     <None Include="Graphics\Shaders\hud.fs" />
     <None Include="Graphics\Shaders\hud.vs" />
     <None Include="Graphics\Shaders\sky.fs" />
-    <None Include="Graphics\Shaders\fs.fs" />
+    <None Include="Graphics\Shaders\entity.fs" />
     <None Include="Graphics\Shaders\sky.vs" />
-    <None Include="Graphics\Shaders\vs.vs" />
+    <None Include="Graphics\Shaders\terrain.fs" />
+    <None Include="Graphics\Shaders\terrain.vs" />
+    <None Include="Graphics\Shaders\entity.vs" />
     <None Include="Resources\Cube.mesh" />
     <None Include="Resources\Plane.mesh" />
     <None Include="Resources\SkyBox.mesh" />
