--- a/IG Engine/IG Engine.vcxproj.filters
+++ b/IG Engine/IG Engine.vcxproj.filters
@@ -270,4 +270,8 @@
   <ItemGroup>
     <Text Include="Resources\HINT.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="Resources\Mesh\Dragon\dragon.obj" />
+    <Object Include="Resources\Mesh\Stall\stall.obj" />
+  </ItemGroup>
 </Project>
