--- a/IG Engine/IG Engine.vcxproj
+++ b/IG Engine/IG Engine.vcxproj
@@ -228,6 +228,10 @@
   <ItemGroup>
     <Text Include="Resources\HINT.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="Resources\Mesh\Dragon\dragon.obj" />
+    <Object Include="Resources\Mesh\Stall\stall.obj" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
